// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header Header Component should match the snapshot with isLoggedIn as false and path containing movies 1`] = `
<header
  className="header-main"
  style={
    Object {
      "backgroundImage": "linear-gradient(rgba(200, 200, 200, 0.9), rgba(200, 200, 200, 0.9)), url(https://image.tmdb.org/t/p/original//5BwqwxMEjeFtdknRV792Svo0K1v.jpg)",
    }
  }
>
  <h1
    className="header-h1"
  >
    Rancid Tomatillos
  </h1>
  <section
    className="header-btn-section"
  >
    <Link
      className="login-link"
      to="/login"
    >
      <button
        className="header-btn"
      >
        Log In
      </button>
    </Link>
    <Link
      className="login-link"
      to="/"
    >
      <Route
        path={
          Array [
            "/login",
            "/movies/:id",
          ]
        }
        render={[Function]}
      />
    </Link>
  </section>
</header>
`;

exports[`Header Header Component should match the snapshot with isLoggedIn as true and path not containing movies 1`] = `
<header
  className="header-main"
  style={
    Object {
      "backgroundImage": "linear-gradient(rgba(200, 200, 200, 0), rgba(200, 200, 200, 0)), url(https://image.tmdb.org/t/p/original//5BwqwxMEjeFtdknRV792Svo0K1v.jpg)",
    }
  }
>
  <h1
    className="header-h1"
  >
    Rancid Tomatillos
  </h1>
  <section
    className="header-btn-section"
  >
    <Link
      className="login-link"
      to="/"
    >
      <button
        className="header-btn-logout"
        onClick={[Function]}
      >
        Log Out
      </button>
    </Link>
    <Link
      className="login-link"
      to="/"
    >
      <Route
        path={
          Array [
            "/login",
            "/movies/:id",
          ]
        }
        render={[Function]}
      />
    </Link>
  </section>
</header>
`;
